Arregle el nav al interactuar con el scroll y agregue paginas a los enlaces

--- a/index.html
+++ b/index.html
@@ -111,17 +111,17 @@
         <h2 class="titulo_secundario left">Proyectos</h2> 
         <div class="contenedor_proyectos">
             <div class="proyecto"> 
-                <a href="https://opienso.github.io" target="_blank"><img src="./img/proyectos/burguer.png" alt="Pagina de hamburguesas"></a>
+                <a href="https://opienso.github.io/Week-burguer---practica" target="_blank"><img src="./img/proyectos/burguer.png" alt="Pagina de hamburguesas"></a>
                 <h5>Burguer Week</h5> <!--Nombre de cosa pequeño-->
                 <p> Utilicé HTML y CSS para crear una página web estática de una tienda de hamburguesas. Siguiendo un tutorial, aprendí a estructurar y diseñar la página utilizando HTML y CSS</p> <!--Parrafo secundario pequeño-->
             </div>
             <div class="proyecto">
-                <a href=""><img src="./img/proyectos/Soy Paloma.png" alt="Landing Page"></a>
+                <a href="https://opienso.github.io/Soy-Paloma/" target="_blank"><img src="./img/proyectos/Soy Paloma.png" alt="Landing Page"></a>
                 <h5>Soy Paloma</h5> <!--Nombre de cosa pequeño-->
                 <p>Desarrollé una landing page como un portfolio para mi pareja. Utilizando HTML y CSS, creé una página web personalizada para destacar su talento y captar la atención de los visitantes.</p> <!--Parrafo secundario pequeño-->
             </div>
             <div class="proyecto">
-                <a href=""><img src="./img/proyectos/E-commerce.png" alt="E-commerce"></a>
+                <a href="https://opienso.github.io/In-Tienda-Tortugas/" target="_blank"><img src="./img/proyectos/E-commerce.png" alt="E-commerce"></a>
                 <h5>In, Tienda de Tortugas</h5> <!--Nombre de cosa pequeño-->
                 <p>Como parte de mi curso en Coderhouse, cree un e-commerce desde cero utilizando HTML, CSS y JavaScript. Este proyecto final me permitió aplicar los conocimientos adquiridos durante el curso y demostrar mi capacidad para desarrollar una tienda en línea funcional y atractiva.</p> <!--Parrafo secundario pequeño-->
             </div>
