boton de contacto al mail

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </ul>
             </div>
             <div class="boton">
-                <a href="">Contactame</a>
+                <a href="mailto:ezequiel2001uni@gmail.com?subject=Consulta%20de%20portfolio&amp;body=Hola,%20me%20gustaría%20discutir%20oportunidades%20de%20colaboración.">Contáctame</a>
             </div>
         </nav>
         <div class="linea"></div>
@@ -33,7 +33,7 @@
             <ul> <!--Lista de contacto-->
                 <li><a href="">Email <i class="bi bi-arrow-up-right"></i></a></li>
                 <li><a href="">Linkedin <i class="bi bi-arrow-up-right"></i></a></li>
-                <li><a href="">Curriculum <i class="bi bi-arrow-up-right"></i></a></li>
+                <li><a href="#sobre-mi">Curriculum <i class="bi bi-arrow-up-right"></i></a></li>
             </ul>
         </div>
         <div class="hero_right"> <!--Imagen de perfil-->
@@ -53,7 +53,7 @@
             lógica.</p> <!--Parrafo secundario-->
             <h3>Actualmente estoy estudiando y busco insertarme en el mundo laboral</h3> <!--Mensaje con relevancia-->
             <div class="boton-cv">
-                <a href="/img/turtle_2.gif" download="">Descarga mi CV</a>
+                <a href="/img/archivos/Ezequiel Espinoza - CV.pdf" download="">Descarga mi CV</a>
             </div>
         </div>
     </section>
