--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <title>Ezequiel</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -29,7 +31,8 @@
         <div class="hero_info">
             <h4><i class="bi bi-geo-alt"></i>, Rosario, Argentina</h4>
             <h1>Hola,<br> me llamo <span class="efecto_maquina parpadeo">Ezequiel</h1> <!--Titulo principal-->
-            <p>¡Hola! Soy Ezequiel, un estudiante de la Tecnicatura Universitaria en Programación en la UTN, y estoy en mi viaje de convertirme en un desarrollador Front-End.</p> <!--Parrafo principal-->
+            <p class="hero_text">¡Hola! Soy Ezequiel, un estudiante de la Tecnicatura Universitaria en Programación de
+                la UTN, y estoy en mi viaje de convertirme en un desarrollador Front-End.</p> <!--Parrafo principal-->
             <ul> <!--Lista de contacto-->
                 <li><a href="">Email <i class="bi bi-arrow-up-right"></i></a></li>
                 <li><a href="">Linkedin <i class="bi bi-arrow-up-right"></i></a></li>
@@ -47,10 +50,12 @@
             <img src="/img/code-1076536_960_720.jpg" alt="Codigo">
         </div>
         <div class="sobre_mi_info">
-            <h2 class="titulo_secundario">Sobre mí</h2> 
-            <p class="parrafo_secundario">Me fascina el mundo de la tecnología y la forma en que puede impactar nuestras vidas de manera positiva. Estoy
-            especialmente interesado en el desarrollo web, ya que creo que es una combinación perfecta entre creatividad y
-            lógica.</p> <!--Parrafo secundario-->
+            <h2 class="titulo_secundario">Sobre mí</h2>
+            <p class="parrafo_secundario">Me fascina el mundo de la tecnología y la forma en que puede impactar nuestras
+                vidas de manera positiva. Estoy
+                especialmente interesado en el desarrollo web, ya que creo que es una combinación perfecta entre
+                creatividad y
+                lógica.</p> <!--Parrafo secundario-->
             <h3>Actualmente estoy estudiando y busco insertarme en el mundo laboral</h3> <!--Mensaje con relevancia-->
             <div class="boton-cv">
                 <a href="/img/archivos/Ezequiel Espinoza - CV.pdf" download="">Descarga mi CV</a>
@@ -58,72 +63,82 @@
         </div>
     </section>
     <section class="Habilidades">
-        <h2 class="titulo_secundario">Habilidades</h2> 
-        <h3 class="subtitulo_secundario">Lenguajes</h3>   
+        <h2 class="titulo_secundario">Habilidades</h2>
+        <h3 class="subtitulo_secundario">Lenguajes</h3>
         <div class="lenguajes">
-            <div class="tarjetita"> 
-                <img class="tarjetita_img" src="/img/html.png" alt="html logo"> 
-                <h4 class="tarjetita_nombre">HTML</h4> 
-            </div>
-            <div class="tarjetita"> 
-                <img class="tarjetita_img" src="/img/css.png" alt="css logo"> 
-                <h4 class="tarjetita_nombre">CSS</h4> 
-            </div>
-            <div class="tarjetita"> 
-                <div class="tarjetita_img">
-                    <img src="/img/javas.png" alt="Javascript logo"> 
-                </div>
-                <h4 class="tarjetita_nombre">Javascript</h4> 
+            <div class="tarjetita">
+                <img class="tarjetita_img" src="/img/html.png" alt="html logo">
+                <h4 class="tarjetita_nombre">HTML</h4>
             </div>
             <div class="tarjetita">
-                <img class="tarjetita_img" src="/img/python.png" alt="python logo"> 
-                <h4 class="tarjetita_nombre">Python</h4> 
+                <img class="tarjetita_img" src="/img/css.png" alt="css logo">
+                <h4 class="tarjetita_nombre">CSS</h4>
+            </div>
+            <div class="tarjetita">
+                <div class="tarjetita_img">
+                    <img src="/img/javas.png" alt="Javascript logo">
+                </div>
+                <h4 class="tarjetita_nombre">Javascript</h4>
+            </div>
+            <div class="tarjetita">
+                <img class="tarjetita_img" src="/img/python.png" alt="python logo">
+                <h4 class="tarjetita_nombre">Python</h4>
             </div>
         </div>
-        <h3 class="subtitulo_secundario">Herramientas</h3> 
+        <h3 class="subtitulo_secundario">Herramientas</h3>
         <div class="herramientas">
-            <div class="tarjetita"> 
-                <img class="tarjetita_img" src="./img/git.png" alt="git logo"> 
-                <h4 class="tarjetita_nombre">Git</h4> 
+            <div class="tarjetita">
+                <img class="tarjetita_img" src="./img/git.png" alt="git logo">
+                <h4 class="tarjetita_nombre">Git</h4>
             </div>
-            <div class="tarjetita"> 
+            <div class="tarjetita">
                 <img class="tarjetita_img" src="./img/github.png" alt="github logo">
-                <h4 class="tarjetita_nombre">Github</h4> 
+                <h4 class="tarjetita_nombre">Github</h4>
             </div>
         </div>
-        <h3 class="subtitulo_secundario">Librerías</h3> 
+        <h3 class="subtitulo_secundario">Librerías</h3>
         <div class="librerias">
-            <div class="tarjetita"> 
-                <img class="tarjetita_img" src="./img/bootstrapp.png" alt=""> 
-                <h4 class="tarjetita_nombre">Bootstrapp</h4> 
+            <div class="tarjetita">
+                <img class="tarjetita_img" src="./img/bootstrapp.png" alt="">
+                <h4 class="tarjetita_nombre">Bootstrapp</h4>
             </div>
             <div class="tarjetita">
                 <img class="tarjetita_img" src="./img/sass.png" alt="">
-                <h4 class="tarjetita_nombre">Sass</h4> 
+                <h4 class="tarjetita_nombre">Sass</h4>
             </div>
-            <div class="tarjetita"> 
-                <img class="tarjetita_img" src="./img/react.png" alt=""> 
-                <h4 class="tarjetita_nombre">React</h4> 
+            <div class="tarjetita">
+                <img class="tarjetita_img" src="./img/react.png" alt="">
+                <h4 class="tarjetita_nombre">React</h4>
             </div>
         </div>
     </section>
     <section class="proyectos" id="proyectos">
-        <h2 class="titulo_secundario left">Proyectos</h2> 
+        <h2 class="titulo_secundario left">Proyectos</h2>
         <div class="contenedor_proyectos">
-            <div class="proyecto"> 
-                <a href="https://opienso.github.io/Week-burguer---practica" target="_blank"><img src="./img/proyectos/burguer.png" alt="Pagina de hamburguesas"></a>
+            <div class="proyecto">
+                <a href="https://opienso.github.io/Week-burguer---practica/" target="_blank"><img
+                        src="./img/proyectos/burguer.png" alt="Pagina de hamburguesas"></a>
                 <h5>Burguer Week</h5> <!--Nombre de cosa pequeño-->
-                <p> Utilicé HTML y CSS para crear una página web estática de una tienda de hamburguesas. Siguiendo un tutorial, aprendí a estructurar y diseñar la página utilizando HTML y CSS</p> <!--Parrafo secundario pequeño-->
+                <p> Utilicé HTML y CSS para crear una página web estática de una tienda de hamburguesas. Siguiendo un
+                    tutorial, aprendí a estructurar y diseñar la página utilizando HTML y CSS</p>
+                <!--Parrafo secundario pequeño-->
             </div>
             <div class="proyecto">
-                <a href="https://opienso.github.io/Soy-Paloma/" target="_blank"><img src="./img/proyectos/Soy Paloma.png" alt="Landing Page"></a>
+                <a href="https://opienso.github.io/Soy-Paloma/" target="_blank"><img
+                        src="./img/proyectos/Soy Paloma.png" alt="Landing Page"></a>
                 <h5>Soy Paloma</h5> <!--Nombre de cosa pequeño-->
-                <p>Desarrollé una landing page como un portfolio para mi pareja. Utilizando HTML y CSS, creé una página web personalizada para destacar su talento y captar la atención de los visitantes.</p> <!--Parrafo secundario pequeño-->
+                <p>Desarrollé una landing page como un portfolio para mi pareja. Utilizando HTML y CSS, creé una página
+                    web personalizada para destacar su talento y captar la atención de los visitantes.</p>
+                <!--Parrafo secundario pequeño-->
             </div>
             <div class="proyecto">
-                <a href="https://opienso.github.io/In-Tienda-Tortugas/" target="_blank"><img src="./img/proyectos/E-commerce.png" alt="E-commerce"></a>
+                <a href="https://opienso.github.io/In-Tienda-Tortugas/" target="_blank"><img
+                        src="./img/proyectos/E-commerce.png" alt="E-commerce"></a>
                 <h5>In, Tienda de Tortugas</h5> <!--Nombre de cosa pequeño-->
-                <p>Como parte de mi curso en Coderhouse, cree un e-commerce desde cero utilizando HTML, CSS y JavaScript. Este proyecto final me permitió aplicar los conocimientos adquiridos durante el curso y demostrar mi capacidad para desarrollar una tienda en línea funcional y atractiva.</p> <!--Parrafo secundario pequeño-->
+                <p>Como parte de mi curso en Coderhouse, cree un e-commerce desde cero utilizando HTML, CSS y
+                    JavaScript. Este proyecto final me permitió aplicar los conocimientos adquiridos durante el curso y
+                    demostrar mi capacidad para desarrollar una tienda en línea funcional y atractiva.</p>
+                <!--Parrafo secundario pequeño-->
             </div>
         </div>
     </section>
@@ -141,4 +156,5 @@
     </footer>
     <script src="index.js"></script>
 </body>
+
 </html>
